feat 项目支持软链其他项目（代替项目副本）